objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Contract Management</fullName>
        <description>SFDC1-8125: Support process for Contract Management</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Care</fullName>
        <description>Main Case Record for Customer Care Cases;SFDC1-5541: Remove Delete and Duplicate values</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by 3rd Party</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by Customer</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting - 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Experience</fullName>
        <description>SFDC-4998 To track the survey related feedback &amp; responses received from internal &amp; external users</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed - No action required</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Closed - Unable to reach Customer</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
        <values>
            <fullName>Waiting - Third Party</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Data Lake</fullName>
        <description>SFDC-4144 Data Lake</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting - Sales Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GDSA</fullName>
        <description>SFDC1-7673 GDSA is to replace SalesForce Help record type for Data Governance case handling process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by Customer</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Implementation</fullName>
        <description>SFDC1-7137: Adding support process for Implementation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting - 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Joiner%2FTransfer%2FLeaver</fullName>
        <description>SFDC1-6829 - Case Joiner Leaver Transfer Status Related process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting - 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NRG</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active Waiting for info</fullName>
        </values>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Referral</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Referral</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Onboarding</fullName>
        <description>SFDC1-593 Support porcess for Onboarding</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>Connectivity</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Initial Delivery Complete</fullName>
        </values>
        <values>
            <fullName>Install Complete</fullName>
        </values>
        <values>
            <fullName>Live</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Testing</fullName>
        </values>
        <values>
            <fullName>Trial Approved</fullName>
        </values>
        <values>
            <fullName>User Access Granted</fullName>
        </values>
        <values>
            <fullName>Waiting - 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
        <values>
            <fullName>Welcome Package Sent</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Order Management</fullName>
        <description>SFDC1-7145: Adding support process for Order Management; SFDC1-7780: Changing status for Order managment. SFDC1-8780: Updating status as per war room story</description>
        <isActive>true</isActive>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Second Review</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Updated</fullName>
        </values>
        <values>
            <fullName>Validated</fullName>
        </values>
        <values>
            <fullName>Validated PO Pending</fullName>
        </values>
        <values>
            <fullName>Validated by ConsOps</fullName>
        </values>
        <values>
            <fullName>Validated-BSI Pending</fullName>
        </values>
        <values>
            <fullName>Validated-POD Pending</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Order Mgmt%2FDelivery Help Desk</fullName>
        <description>SFDC1-6148 : Support process for Order Mgmt/Delivery Help Desk</description>
        <isActive>true</isActive>
        <values>
            <fullName>In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Resolved%2FCompleted</fullName>
        </values>
        <values>
            <fullName>Resolved%2FNo Response</fullName>
        </values>
        <values>
            <fullName>Waiting - 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on Approvals</fullName>
        </values>
        <values>
            <fullName>Waiting on Info</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Operations</fullName>
        <description>SFDC1-9677: New process for Sales Operations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active Waiting for info</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Ops</fullName>
        <description>New support process for sales ops team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned to HD Associate</fullName>
        </values>
        <values>
            <fullName>Entered Ticket</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Researching</fullName>
        </values>
        <values>
            <fullName>Resolved%2FCompleted</fullName>
        </values>
        <values>
            <fullName>Resolved%2FNo Response</fullName>
        </values>
        <values>
            <fullName>Waiting on Approvals</fullName>
        </values>
        <values>
            <fullName>Waiting on Info</fullName>
        </values>
        <values>
            <fullName>Waiting on Requester</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Help</fullName>
        <description>Main Case Record for Salesforce Help Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by Customer</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Helpdesk</fullName>
        <description>SFDC1-8162 Main Case Record for Salesforce Helpdesk Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active Waiting for info</fullName>
        </values>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Moved to ADO</fullName>
        </values>
        <values>
            <fullName>Closed - Moved to Jira</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Suggestion</fullName>
        <description>SFDC1-9762 Main Case Record for Salesforce Suggestion Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Moved to Jira</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by 3rd Party</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Waiting - 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountCreated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-309 Lookup to account, this is the account that is created when the type/subtype is Data Governance/New account</description>
        <inlineHelpText>This value is required to close the ticket when the Subtype=New account</inlineHelpText>
        <label>Account Created/Associated</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Account Created)</relationshipLabel>
        <relationshipName>AccountCreatedCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>SFDC1-965 and SFDC1-683 Field to hold account name which will be used to create new Account
SFDC1-10142 change label to &quot;Requested Account Name&quot;</description>
        <inlineHelpText>Legal Entity Name of the requested account</inlineHelpText>
        <label>Requested Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOwnerManager__c</fullName>
        <description>SFDC-2287 Account Governance New Account Request additional fields</description>
        <inlineHelpText>Requested account owner without using lookup</inlineHelpText>
        <label>Account Owner / Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-309 Lookup to Accounts
SFDC1-8156: Relabeling related list label to &quot; Internal Cases&quot;</description>
        <inlineHelpText>Salesforce will populate when the case is spawned from an Account</inlineHelpText>
        <label>Account Reference</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internal Cases</relationshipLabel>
        <relationshipName>AccountReferenceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>Type of Account</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>Channel Partner</fullName>
                </value>
                <value>
                    <fullName>Global Alliance - Core</fullName>
                </value>
                <value>
                    <fullName>Global Alliance - HSP</fullName>
                </value>
                <value>
                    <fullName>Global Alliance - Prospect</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Place Holder - General Service Account</fullName>
                </value>
                <value>
                    <fullName>Place Holder - IHS Markit Internal Employees</fullName>
                </value>
                <value>
                    <fullName>Place Holder - Sales</fullName>
                </value>
                <value>
                    <fullName>Place Holder - Self Registered Users Account</fullName>
                </value>
                <value>
                    <fullName>Place Holder - Unknown Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActionTaken__c</fullName>
        <description>SFDC1-251 Determine how many cases involved actual changes versus  answering client questio.</description>
        <inlineHelpText>Please populate the field with the appropriate action taken.</inlineHelpText>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corrected Data</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>General Support</fullName>
                </value>
                <value>
                    <fullName>Cancelled Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdditionalFields__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-652 Required for the Additional Case Fields Setup</description>
        <inlineHelpText>Updated by Salesforce for certain Product Groups</inlineHelpText>
        <label>Additional Fields</label>
        <referenceTo>AdditionalCaseFields__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdditionalRejectionInformation__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Additional Rejection Information</inlineHelpText>
        <label>Additional Rejection Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <description>SFDC1-965 SFDC1-683 Account address field for new Account creation through Case</description>
        <inlineHelpText>Address field required for new Account creation through Case</inlineHelpText>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <description>SFDC1-965 SFDC1-683 Address field for new Account creation through Case</description>
        <inlineHelpText>Second Address field for new Account creation through Case</inlineHelpText>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignToQueue__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SFDC1-6629, This would be used to fire the assignment rule when Sales support case gets created by quick action.</description>
        <label>Assign to Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssociatedTo__c</fullName>
        <description>SFDC-5603 - Associated To field to tag records [Maintenance field]</description>
        <label>Associated To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AssociatedTo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuditedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-251 This field shows who audited the case</description>
        <inlineHelpText>Please populate this field with the user that audited the case if applicable.</inlineHelpText>
        <label>Audited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditedOn__c</fullName>
        <description>SFDC1-251 Signifies that the record has been audited.</description>
        <inlineHelpText>Please populate the date and time when this case was set to be audited.</inlineHelpText>
        <label>Audited On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AutoRenewalWithChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Auto-Renewal With Change</inlineHelpText>
        <label>Auto-Renewal With Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Auto-Renewal</inlineHelpText>
        <label>Auto-Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSIMembership__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>BSI Membership #</inlineHelpText>
        <label>BSI Membership #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessArea__c</fullName>
        <description>SFDC1-8003 
SFDC helpdesk case business area.</description>
        <inlineHelpText>Please populate the business area that this case relates to.</inlineHelpText>
        <label>Business Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Business Analysis</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Contract Management</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Heldesk</fullName>
                    <label>Helpdesk</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessDivision__c</fullName>
        <description>SFDC-4690: Business division for reporting purpose</description>
        <label>Business Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Global Shared Services</fullName>
                </value>
                <value>
                    <fullName>Automotive/Transportation</fullName>
                </value>
                <value>
                    <fullName>CMS/Product Design</fullName>
                </value>
                <value>
                    <fullName>Commodity Insights</fullName>
                </value>
                <value>
                    <fullName>Customer Master Data</fullName>
                </value>
                <value>
                    <fullName>Dow Jones Indices</fullName>
                </value>
                <value>
                    <fullName>Engineering Solutions</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Global Functions</fullName>
                </value>
                <value>
                    <fullName>Market Intelligence</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Ratings</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>Automotive / Transportation / Mobility</fullName>
                    <isActive>false</isActive>
                    <label>Automotive / Transportation / Mobility</label>
                </value>
                <value>
                    <fullName>CMS / Product Design / Engineering Solutions</fullName>
                    <isActive>false</isActive>
                    <label>CMS / Product Design / Engineering Solutions</label>
                </value>
                <value>
                    <fullName>Financial Services / Market Intelligence</fullName>
                    <isActive>false</isActive>
                    <label>Financial Services / Market Intelligence</label>
                </value>
                <value>
                    <fullName>Global Functions / Shared Services / S&amp;P Corporate</fullName>
                    <isActive>false</isActive>
                    <label>Global Functions / Shared Services / S&amp;P Corporate</label>
                </value>
                <value>
                    <fullName>Resources / Commodity Insights</fullName>
                    <isActive>false</isActive>
                    <label>Resources / Commodity Insights</label>
                </value>
                <value>
                    <fullName>S&amp;P Dow Jones Indices</fullName>
                    <isActive>false</isActive>
                    <label>S&amp;P Dow Jones Indices</label>
                </value>
                <value>
                    <fullName>S&amp;P Global Ratings</fullName>
                    <isActive>false</isActive>
                    <label>S&amp;P Global Ratings</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <description>SFDC1-88 Business Line of the case</description>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessSegment__c</fullName>
        <description>SFDC-5338 : the field Business Segment is mandatory while creating Contact.</description>
        <inlineHelpText>Subsection of the company as indicated by product or service offering.</inlineHelpText>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Back/Mid Office</fullName>
                </value>
                <value>
                    <fullName>Compliance/Audit</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Consumer Banking</fullName>
                </value>
                <value>
                    <fullName>Corporate Banking</fullName>
                </value>
                <value>
                    <fullName>FinTech</fullName>
                </value>
                <value>
                    <fullName>Front Office</fullName>
                </value>
                <value>
                    <fullName>Investment Banking</fullName>
                </value>
                <value>
                    <fullName>Investment Management</fullName>
                </value>
                <value>
                    <fullName>IT/Transformation</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement/Sourcing</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Retail Brokerage</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Tax/Accounting</fullName>
                </value>
                <value>
                    <fullName>Treasury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ByPassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-10251: Field used to bypass validation rules. OMDH case created from lightning component in Contract has to be bypassed</description>
        <inlineHelpText>Field used to bypass validation rules</inlineHelpText>
        <label>By Pass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6009: Campaign Reference field holds Campaign Reference</description>
        <label>Campaign Reference</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>